# rich-tree

./: .gitignore  404.html  README.md  TODO.md  demo.html  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  setup.cfg  sitemap.xml  test.py
.github/workflows/: docs.yml  publish.yml
changelog/: index.html
cli-reference/: index.html
configuration/: index.html
contributing/: index.html
docs/: changelog.md  cli-reference.md  configuration.md  contributing.md  features.md  getting-started.md  icons.md  index.md  onboarding.md
features/: index.html
getting-started/: index.html
icons/: index.html
onboarding/: index.html
rtree/: __main__.py  _icons.py  core.py  onboarding.py
search/: search_index.json
stylesheets/: extra.css
