[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rich-tree"
dynamic = ["version"]
description = "A better tree command with beautiful icons and colors made in Python"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    {name = "Wasi Master", email = "arianmollik323@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Terminals",
]
keywords = ["rtree", "tree", "rich", "cli", "nerdfonts"]
dependencies = [
    "rich",
    "click",
    "rich-click",
    "questionary",
    "shellingham",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/wasi-master/rich-tree/issues"
"Source" = "https://github.com/wasi-master/rich-tree"
"Documentation" = "https://wasi-master.github.io/rich-tree"
"Say Thanks" = "https://saythanks.io/to/wasi-master"

[project.scripts]
rtree = "rtree.__main__:cli"

[project.entry-points."pipx.run"]
rich-tree = "rtree.__main__:cli"

[tool.setuptools]
packages = ["rtree"]

[tool.setuptools.dynamic]
version = {attr = "rtree.__version__"}
