[metadata]
name = rich-tree
version = attr: rtree.__version__
description = A better tree command with beautiful icons and colors made in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wasi-master/rich-tree
author = Wasi Master
author_email = arianmollik323@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Terminals
keywords =
    rtree
project_urls =
    Bug Tracker = https://github.com/wasi-master/rich-tree/issues
    Source = https://github.com/wasi-master/rich-tree
    Documentation = https://wasi-master.github.io/rich-tree
    Say Thanks = https://saythanks.io/to/wasi-master

[options]
packages =
    rtree
install_requires =
    rich
python_requires = >=3.6
zip_safe = False

[options.entry_points]
console_scripts =
    rtree=rtree.__main__:cli
pipx.run =
    rich-tree=rtree.__main__:cli
